# custom-ai-novel

./: manage.py  openssl.conf  pyproject.toml  uwsgi.ini
custom_novel/: asgi.py  custom_ai_novel.ini  settings.py  urls.py  wsgi.py
custom_novel/llms/: __init__.py  base.py  llm.py
custom_novel/novel/: apps.py  models.py  serializers.py  urls.py  views.py
custom_novel/novel/migrations/: 0001_initial.py
custom_novel/pub/: base_views.py  prompt.py
templates/novel_content/: first_chapter_draft_prompt.md  next_chapter_draft_prompt.md
templates/novel_setting/: chapter_blueprint_prompt.md  character_dynamics_prompt.md  chunked_chapter_blueprint_prompt.md  core_seed_prompt.md  create_character_state_prompt.md  plot_architecture_prompt.md  world_view_prompt.md
templates/novel_update/: previous_summary_prompt.md  update_character_state_prompt.md
